--- a/index.html
+++ b/index.html
@@ -26,71 +26,69 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-  <div class="jumbotron jumbotron-fluid">
     <div class="container container-fluid">
-      <div class="row time-block" id="8">
+      <div class="row time-block" name="8">
         <div class="col-sm-1 hour">8am</div>
-        <textarea class="col-sm-10 past present future description"></textarea>
+        <textarea id="8" class="col-sm-10 description"></textarea>
           <button class="col-sm-1 saveBtn i:hover"><i class="fas fa-save"></i></button>
       </div>
-      <div class="row time-block" id="9">
+      <div class="row time-block" name="9">
         <div class="col-sm-1 hour">9am</div>
-        <textarea class="col-sm-10 past present future description"></textarea>
+        <textarea id="8" class="col-sm-10 description"></textarea>
           <button class="col-sm-1 saveBtn i:hover"><i class="fas fa-save"></i></button>
       </div>
-      <div class="row time-block" id="10">
+      <div class="row time-block" name="10">
         <div class="col-sm-1 hour">10am</div>
-        <textarea class="col-sm-10 past present future description"></textarea>
+        <textarea id="8" class="col-sm-10 description"></textarea>
           <button class="col-sm-1 saveBtn i:hover"><i class="fas fa-save"></i></button>
       </div>
-      <div class="row time-block" id="11">
+      <div class="row time-block" name="11">
         <div class="col-sm-1 hour">11am</div>
-        <textarea class="col-sm-10 past present future description"></textarea>
+        <textarea id="8" class="col-sm-10 description"></textarea>
           <button class="col-sm-1 saveBtn i:hover"><i class="fas fa-save"></i></button>
       </div>
-      <div class="row time-block" id="12">
+      <div class="row time-block" name="12">
         <div class="col-sm-1 hour">12pm</div>
-        <textarea class="col-sm-10 past present future description"></textarea>
+        <textarea id="8" class="col-sm-10 description"></textarea>
           <button class="col-sm-1 saveBtn i:hover"><i class="fas fa-save"></i></button>
       </div>
-      <div class="row time-block" id="13">
+      <div class="row time-block" name="13">
         <div class="col-sm-1 hour">1pm</div>
-        <textarea class="col-sm-10 past present future description"></textarea>
+        <textarea id="8" class="col-sm-10 description"></textarea>
           <button class="col-sm-1 saveBtn i:hover"><i class="fas fa-save"></i></button>
       </div>
-      <div class="row time-block" id="14">
+      <div class="row time-block" name="14">
         <div class="col-sm-1 hour">2pm</div>
-        <textarea class="col-sm-10 past present future description"></textarea>
+        <textarea id="8" class="col-sm-10 description"></textarea>
           <button class="col-sm-1 saveBtn i:hover"><i class="fas fa-save"></i></button>
       </div>
-      <div class="row time-block" id="15">
+      <div class="row time-block" name="15">
         <div class="col-sm-1 hour">3pm</div>
-        <textarea class="col-sm-10 past present future description"></textarea>
+        <textarea id="8" class="col-sm-10 description"></textarea>
           <button class="col-sm-1 saveBtn i:hover"><i class="fas fa-save"></i></button>
       </div>
-      <div class="row time-block" id="16">
+      <div class="row time-block" name="16">
         <div class="col-sm-1 hour">4pm</div>
-        <textarea class="col-sm-10 past present future description"></textarea>
+        <textarea id="8" class="col-sm-10 description"></textarea>
           <button class="col-sm-1 saveBtn i:hover"><i class="fas fa-save"></i></button>
       </div>
-      <div class="row time-block" id="17">
+      <div class="row time-block" name="17">
         <div class="col-sm-1 hour">5pm</div>
-        <textarea class="col-sm-10 past present future description"></textarea>
+        <textarea id="8" class="col-sm-10 description"></textarea>
           <button class="col-sm-1 saveBtn i:hover"><i class="fas fa-save"></i></button>
       </div>
-      <div class="row time-block" id="18">
+      <div class="row time-block" name="18">
         <div class="col-sm-1 hour">6pm</div>
-        <textarea class="col-sm-10 past present future description"></textarea>
+        <textarea id="8" class="col-sm-10 description"></textarea>
           <button class="col-sm-1 saveBtn i:hover"><i class="fas fa-save"></i></button>
       </div>
-      <div class="row time-block" id="19">
+      <div class="row time-block" name="19">
         <div class="col-sm-1 hour">7pm</div>
-        <textarea class="col-sm-10 past present future description"></textarea>
+        <textarea id="8" class="col-sm-10 description"></textarea>
           <button class="col-sm-1 saveBtn i:hover"><i class="fas fa-save"></i></button>
         </div>
       </div>
     </div>
-  </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="script.js"></script>
